--- a/src/css/header.css
+++ b/src/css/header.css
@@ -10,9 +10,11 @@
 }
 
 .nav-link {
-  font-weight: 500;
+  font-weight: 700;
+  font-size: 30px;
   letter-spacing: 0.02em;
   line-height: 1.5;
+  display: block;
 }
 
 .nav-link:hover,
