--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,117 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+}
+
+.gallery img:hover {
+  transform: scale(1.1);
+}
+
+.back-button {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #007bff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.back-button:hover {
+  background-color: #0056b3;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.link-container {
+  margin-top: 20px;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  text-align: center;
+}
+
+.feedback-form {
+  display: inline-flex;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+input {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  padding-left: 16px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+input:focus,
+input:hover {
+  border: 1px solid #000;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+}
+
+textarea {
+  border-radius: 4px;
+  padding-top: 8px;
+  padding-left: 16px;
+  border: 1px solid #808080;
+  display: flex;
+  width: 360px;
+  height: 80px;
+  resize: none;
+  background-color: transparent;
+  outline: transparent;
+}
+
+textarea:focus,
+textarea:hover {
+  border: 1px solid #000;
+}
+
+.btn-submit {
+  display: inline-block;
+  margin-top: 16px;
+  padding: 8px 16px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #4e75ff;
+  text-decoration: none;
+  border: none;
+  border-radius: 8px;
+  transition: background-color 0.3s ease;
+}
+
+.btn-submit:hover {
+  background-color: #6c8cff;
+}
